# Earnings-Digest-Studio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality-gate.yml
app/: __init__.py  config.py  db.py  main.py  schemas.py  utils.py
app/data/: nvidia_quarterly_revenue_by_segment.csv  tech_analysis_data.js
app/services/: __init__.py  charts.py  institutional_views.py  local_data.py  narrative_writer.py  official_fixtures.py  official_materials.py  official_parsers.py  official_source_resolver.py  pdf_export.py  report_quality.py  reports.py  seed_data.py  uploads.py
app/static/: app.css  app.js
app/templates/: home.html  report_document.html
scripts/: audit_dynamic_reports.py  ocr_images.swift  ocr_pdf.swift  warm_quarterly_series_cache.py
skills/earnings-digest-pdf-reporter/: SKILL.md
skills/earnings-digest-pdf-reporter/agents/: openai.yaml
skills/earnings-digest-pdf-reporter/references/: api-contract.md
skills/earnings-digest-pdf-reporter/scripts/: create_pdf_report.py
tests/: test_app.py
