[project]
name = "earnings-digest-studio"
version = "0.1.0"
description = "Private local earnings digest studio with deep quarterly PDF reports."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "fastapi>=0.115,<0.116",
  "httpx>=0.27,<0.29",
  "jinja2>=3.1,<4",
  "playwright>=1.51,<2",
  "pydantic>=2.10,<3",
  "pypdf>=5.4,<6",
  "python-multipart>=0.0.20,<0.1",
  "uvicorn>=0.34,<0.35",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
